--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.16",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22",
@@ -85,8 +84,7 @@
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
-    "typescript": "^5",
-    "wrangler": "^4.54.0"
+    "typescript": "^5"
   },
   "build": {
     "appId": "com.finance.manager",
